attempt to fix word too big on phones

--- a/style.css
+++ b/style.css
@@ -21,12 +21,26 @@ body, html
     filter: brightness(60%);
 }
 
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 6em;
+    margin-bottom: 10px;
+    color: #f0a214;
+}
+
 /* Background for phones (max-width: 767px) */
 @media only screen and (max-width: 767px) 
 {
     .background 
     {
         background-image: url('images/phone_background.png');
+    }
+
+    h1 {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 3em;
+        margin-bottom: 10px;
+        color: #f0a214;
     }
 }
 
@@ -38,13 +52,6 @@ body, html
     z-index: 1;
     text-align: center;
     color: #fff;
-}
-
-h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 6em;
-    margin-bottom: 10px;
-    color: #f0a214;
 }
 
 p {
